TAG: lib_java_core-4-3-4-3
DATE: 06/13/2011
STAFF: jsb
CHANGES: 
1) added extra constructor to SQLDataManater to allow password to be passed in
2) added PostgresConnection class

TAG: lib_java_core-4-3-4-2
TAG: lib_java_core-4-3-4-1
DATE: 05/19/2010
STAFF: dbm
CHANGES: shire retirement (TR10039)
1) SchemaConstants.java: Added definition for MGDBE

TAG: lib_java_core-4-3-0-1
DATE: 07/14/2009
STAFF: sc
CHANGES: Merge tr7403 branch to trunk

TAG: lib_java_core-tr7493-1
DATE: 02/13/2009
STAFF: sc
CHANGES:
1) org.jax.mgi.shr.dbutils.InterpretedQuery overwrote with version from egload
2) org.jax.mgi.shr.dbutils.ObjectQuery copied from egload
Note: need to remove above from egload 

TAG: lib_java_core-tr7493-BP
DATE: 02/02/2090
STAFF: sc
CHANGES: Gene Trap Less Filling branch point tag

TAG: lib_java_core-4-1-2-2
DATE: 10/08/2008
STAFF: sc	
CHANGES: Merge TR9231 changes to trunk

TAG: lib_java_core-tr9231-1
DATE: 09/03/2008
STAFF: sc
CHANGES: Converter.toSQLString - updated to remove 
  embedded single quotes

TAG: lib_java_core-tr9231-BP
DATE: 09/03/2008
STAFF: sc
CHANGES: branch point tag for tr9231 remove
  embedded single quotes from update statements

TAG: lib_java_core-4-1-2-1
DATE: 08/11/2008
STAFF: jsb
CHANGES: 
1) improved synchronization in ExpiringObjectCache

TAG: lib_java_core-4-1-2-0
DATE: 08/06/2008
STAFF: jsb
CHANGES: merge tr8079 to trunk (phenoview)

TAG: lib_java_core-4-1-1-1
DATE: 7/14/2008
STAFF: marka
CHANGES: merge tr9088 to trunk

TAG: lib_java_core-tr8079-1
DATE: 05/14/2008
STAFF: jsb
CHANGES: 
1) added guarantee() method to ExpiringObjectCache.java

TAG: lib_java_core-tr8079-BP
DATE: 05/14/2008
STAFF: jsb
CHANGES: branch point for tr8079 (phenoview)

TAG: lib_java_core-4-0-0-1
DATE: 12/24/2007
STAFF: pf
CHANGES: merging tr8087 branch to trunk

TAG: lib_java_core-tr8087-(BP,1)
DATE: 9/15/2007 (latest)
STAFF: pf
CHANGES: branch and branch point tags for MGI 4.0 release

TAG: lib_java_core-3-5-1-5
DATE: 02/02/2007
STAFF: lec
CHANGES: 