@@ -1,3 +1,10 @@
+TAG: lib_java_core-4-4-1-1
+DATE: 08/26/2011
+STAFF: sc
+CHANGES: Testing with java1.6
+1) Configuration.java - changed var name 'enum' to 'e' as enum java1.6 reserved word
+2) RcdFile.java - same as above
+
 TAG: lib_java_core-4-3-4-3
 DATE: 06/13/2011
 STAFF: jsb
